# OGLCurve

./: CMakeLists.txt
include/glad/: glad.h
shaders/: cross.frag  line.frag  line.vert
src/: curve_program.cpp  curve_program.hpp  curves.cpp  curves.hpp  glad.c  main.cpp
